--- a/package.json
+++ b/package.json
@@ -25,8 +25,9 @@
   },
   "homepage": "https://github.com/jdbranham/node-instrument#readme",
   "dependencies": {
+    "sinon": "^1.17.4"
   },
   "devDependencies": {
-	  "nodeunit": "0.9.x"
+    "nodeunit": "0.9.x"
   }
 }
