--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "engine": "node 0.12.x",
   "scripts": {
-    "test": "node test/run.js"
+    "test": "mocha test"
   },
   "repository": {
     "type": "git",
@@ -24,10 +24,11 @@
     "url": "https://github.com/jdbranham/node-instrument/issues"
   },
   "homepage": "https://github.com/jdbranham/node-instrument#readme",
-  "dependencies": {
-  },
+  "dependencies": {},
   "devDependencies": {
+    "mocha": "^2.5.3",
+    "should": "^9.0.1",
     "sinon": "^1.17.4",
-    "nodeunit": "0.9.x"
+    "when": "^3.7.7"
   }
 }
